# some_lang

./: pyproject.toml
case-studies/rust2/: 00-literal-bool.rs  01-literal-record-empty.rs  02-literal-record.rs  10-simple-if.rs  11-simple-fun.rs  20-letrec.rs
src/: main.py
src/biunification/: reachability.py  type_checker.py
src/cubiml/: abstract_syntax.py  ast.py  bindings.py  gen_cpp.py  gen_rust.py  gen_rust2.py  interpreter.py  main.py  parser.py  parser2.py  scanner.json  scanner.py  tokenizer.py  type_checker.py  type_heads.py
src/eopl_explicit_refs/: abstract_syntax.py  builtin_module.py  environment.py  etc.py  generic_environment.py  interpreter.py  main.py  parser.py  rename_qualified.py  scanner.json  store.py  tokenizer.py  transform_virtuals.py  type_checker.py  type_impls.py  types.py  vtable_manager.py
src/parsing/: scanner_generator.py
src/some_lang/: ast.py  env.py  interpreter.py  lang_frontend.py  lexer.py  parser.py  parsing.py  type_checker.py  type_heads.py
src/tinyml/: abstract_syntax.py  bindings.py  interpreter.py  main.py  parser.py  scanner.json  tokenizer.py  type_checker.py
src/unification/: structure.py  substitution.py  unify.py
tests/: test_biunification_check.py  test_language_expressions.py  test_language_modules.py  test_lexer.py  test_parser.py  test_parsing.py  test_reachability.py  test_scanner.py  test_substitution.py  test_tokenizer.py  test_type_reification.py  test_unifiction.py
tests/test_cubiml/: test_interpreter.py  test_language.py  test_parser.py  test_rust_gen.py  test_typechecker.py
(+12 files in other folders)
