[tool.poetry]
name = "some-lang"
version = "0.1.0"
description = ""
authors = ["Martin Billinger-Finke <m.billinger-finke@daphos.ai>"]
readme = "README.md"
packages = [{ include = "some_lang", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
mypy = "^0.991"
pyparsing = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
